--- a/mychart/templates/ingress.yaml
+++ b/mychart/templates/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     app: {{ include "mychart.name" . }}
 spec:
   rules:
-    - host: asptesting.com
+    - host: asptestingnow.com
       http:
         paths:
           - path: /
